# beauy-smash-flash

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
content/maps/: fork.map.json  midline.map.json  rings.map.json  split.map.json
docs/: ADDING_CHARACTERS.md  ADDING_WEAPONS.md  CHARACTERS.md  RELEASES.md
maps/: MAPS.md  compile.ts  preview.ts  types.ts  validate.ts
scripts/: build-local.ts  build-release-signed.ps1  fix-lan-firewall.ps1  generate-app-icon.py  generate-head-placeholders.py  generate-maps.ts  import-head.py  maps-cli.ts  process-arthur-kart.py  process-glock.py  process-isaak-ult.py  process-lachy.py  process-luca.py  process-weapon.py  process-yoghurt.py  test-multiplayer.ps1
src/: main.js  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: abilities.rs  commands.rs  discovery.rs  game.rs  game_log.rs  main.rs  maps.rs  maps_embedded.rs  names.rs  net.rs  network.rs  protocol.rs  roster_expansion.rs  session.rs  version.rs
src-tauri/src/bots/: deathmatch.rs  mod.rs  navigation.rs  pathfinding.rs  zombie.rs
src-tauri/src/weapons/: mod.rs
src-tauri/windows/: hooks.nsh
src/app/: appInfo.ts
src/audio/: AudioManager.ts  GameAudio.ts  MusicSequencer.ts
src/content/: arthur-kart.ts  audio.ts  characters.ts  finn-boat.ts  isaak-ult.ts  jacob-directors-cut.ts  lachy-pet.ts  maps.ts  reels.ts  tuning.ts
src/game/: ArenaRenderer.ts  (+3 more)
(+75 files in other folders)
