[package]
name = "beauy-smash-flash"
version = "1.0.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread", "sync"] }
if-addrs = "0.13"
socket2 = { version = "0.5", features = ["all"] }
flate2 = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
